job/flink-cep-pdl/src/main/lang/com/ia/pdl/language/PDLParser.java
// Generated from PDL.g4 by ANTLR 4.7.1

package com.ia.pdl.language ;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PDLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SKIP_NO_SKIP=1, SKIP_TO_NEXT=2, SKIP_SKIP_PAST_LAST=3, SKIP_SKIP_TO_FIRST=4, 
		SKIP_SKIP_TO_LAST=5, IN_SET=6, BETWEEN=7, LIKE=8, REGEXP=9, ESCAPE=10, 
		OR_EXPR=11, AND_EXPR=12, NOT_EXPR=13, WHERE=14, AS=15, SUM=16, AVG=17, 
		MAX=18, MIN=19, ON=20, IS=21, WEEKDAY=22, LW=23, INSTANCEOF=24, TYPEOF=25, 
		CAST=26, CURRENT_TIMESTAMP=27, UNTIL=28, AT=29, TIMEPERIOD_YEAR=30, TIMEPERIOD_YEARS=31, 
		TIMEPERIOD_MONTH=32, TIMEPERIOD_MONTHS=33, TIMEPERIOD_WEEK=34, TIMEPERIOD_WEEKS=35, 
		TIMEPERIOD_DAY=36, TIMEPERIOD_DAYS=37, TIMEPERIOD_HOUR=38, TIMEPERIOD_HOURS=39, 
		TIMEPERIOD_MINUTE=40, TIMEPERIOD_MINUTES=41, TIMEPERIOD_SEC=42, TIMEPERIOD_SECOND=43, 
		TIMEPERIOD_SECONDS=44, TIMEPERIOD_MILLISEC=45, TIMEPERIOD_MILLISECOND=46, 
		TIMEPERIOD_MILLISECONDS=47, TIMEPERIOD_MICROSEC=48, TIMEPERIOD_MICROSECOND=49, 
		TIMEPERIOD_MICROSECONDS=50, BOOLEAN_TRUE=51, BOOLEAN_FALSE=52, VALUE_NULL=53, 
		WITHIN=54, HOUR_SHORT=55, MINUTE_SHORT=56, SECOND_SHORT=57, MILLSECONDS_SHORT=58, 
		NEXT=59, FOLLOWED_BY=60, FOLLOWED_BY_ANY=61, NOT_NEXT=62, NOT_FOLLOWED_BY=63, 
		GOES=64, EQUALS=65, QUESTION=66, LPAREN=67, RPAREN=68, LBRACK=69, RBRACK=70, 
		LCURLY=71, RCURLY=72, COLON=73, COMMA=74, LNOT=75, BNOT=76, NOT_EQUAL=77, 
		DIV=78, PLUS=79, MINUS=80, STAR=81, MOD=82, GE=83, GT=84, LE=85, LT=86, 
		CONTAINS=87, NOT_CONTAINS=88, BXOR=89, BOR=90, LOR=91, BAND=92, BAND_ASSIGN=93, 
		LAND=94, SEMI=95, DOT=96, NUM_LONG=97, NUM_DOUBLE=98, NUM_FLOAT=99, ESCAPECHAR=100, 
		ESCAPEBACKTICK=101, ATCHAR=102, HASHCHAR=103, WS=104, SL_COMMENT=105, 
		ML_COMMENT=106, TICKED_STRING_LITERAL=107, QUOTED_STRING_LITERAL=108, 
		STRING_LITERAL=109, INTEGER_LITERAL=110, FLOATING_POINT_LITERAL=111, IDENT=112;
	public static final int
		RULE_patternSequence = 0, RULE_skipStrategy = 1, RULE_noSkip = 2, RULE_skipToNext = 3, 
		RULE_skipPastLast = 4, RULE_skipToFirst = 5, RULE_skipToLast = 6, RULE_patternCombination = 7, 
		RULE_next = 8, RULE_followedBy = 9, RULE_followedByAny = 10, RULE_notNext = 11, 
		RULE_notFollowedBy = 12, RULE_pattern = 13, RULE_patternName = 14, RULE_quantifier = 15, 
		RULE_times = 16, RULE_timesOrMore = 17, RULE_oneOrMore = 18, RULE_zeroOrMore = 19, 
		RULE_optional = 20, RULE_greedy = 21, RULE_condition = 22, RULE_stopCondition = 23, 
		RULE_expression = 24, RULE_orExpression = 25, RULE_andExpression = 26, 
		RULE_operation = 27, RULE_equalsOperation = 28, RULE_notEqualsOperation = 29, 
		RULE_lowerThanOperation = 30, RULE_lowerEqualsOperation = 31, RULE_greaterThanOperation = 32, 
		RULE_greaterEqualsOperation = 33, RULE_containsOperation = 34, RULE_notContainsOperation = 35, 
		RULE_unaryExpression = 36, RULE_eventProperty = 37, RULE_eventPropertyAtomic = 38, 
		RULE_eventPropertyIdent = 39, RULE_timeWindow = 40, RULE_constant = 41, 
		RULE_numberconstant = 42, RULE_stringconstant = 43, RULE_keywordAllowedIdent = 44, 
		RULE_number = 45;
	public static final String[] ruleNames = {
		"patternSequence", "skipStrategy", "noSkip", "skipToNext", "skipPastLast", 
		"skipToFirst", "skipToLast", "patternCombination", "next", "followedBy", 
		"followedByAny", "notNext", "notFollowedBy", "pattern", "patternName", 
		"quantifier", "times", "timesOrMore", "oneOrMore", "zeroOrMore", "optional", 
		"greedy", "condition", "stopCondition", "expression", "orExpression", 
		"andExpression", "operation", "equalsOperation", "notEqualsOperation", 
		"lowerThanOperation", "lowerEqualsOperation", "greaterThanOperation", 
		"greaterEqualsOperation", "containsOperation", "notContainsOperation", 
		"unaryExpression", "eventProperty", "eventPropertyAtomic", "eventPropertyIdent", 
		"timeWindow", "constant", "numberconstant", "stringconstant", "keywordAllowedIdent", 
		"number"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'no_skip'", "'skip_to_next'", "'skip_past_last'", "'skip_to_first'", 
		"'skip_to_last'", "'in'", "'between'", "'like'", "'regexp'", "'escape'", 
		"'or'", "'and'", "'not'", "'where'", "'as'", "'sum'", "'avg'", "'max'", 
		"'min'", "'on'", "'is'", "'weekday'", "'lastweekday'", "'instanceof'", 
		"'typeof'", "'cast'", "'current_timestamp'", "'until'", "'at'", "'year'", 
		"'years'", "'month'", "'months'", "'week'", "'weeks'", "'day'", "'days'", 
		"'hour'", "'hours'", "'minute'", "'minutes'", "'sec'", "'second'", "'seconds'", 
		"'msec'", "'millisecond'", "'milliseconds'", "'usec'", "'microsecond'", 
		"'microseconds'", "'true'", "'false'", "'null'", "'within'", "'h'", "'m'", 
		"'s'", "'ms'", "'->>'", "'->'", "'--'", "'!->>'", "'!->'", "'=>'", "'='", 
		"'?'", "'('", "')'", "'['", "']'", "'{'", "'}'", "':'", "','", "'!'", 
		"'~'", "'!='", "'/'", "'+'", "'-'", "'*'", "'%'", "'>='", "'>'", "'<='", 
		"'<'", "'><'", "'>!<'", "'^'", "'|'", "'||'", "'&'", "'&='", "'&&'", "' ;'", 
		"'.'", "'\u18FF'", "'\u18FE'", "'\u18FD'", "'\\'", "'`'", "'@'", "'#'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "SKIP_NO_SKIP", "SKIP_TO_NEXT", "SKIP_SKIP_PAST_LAST", "SKIP_SKIP_TO_FIRST", 
		"SKIP_SKIP_TO_LAST", "IN_SET", "BETWEEN", "LIKE", "REGEXP", "ESCAPE", 
		"OR_EXPR", "AND_EXPR", "NOT_EXPR", "WHERE", "AS", "SUM", "AVG", "MAX", 
		"MIN", "ON", "IS", "WEEKDAY", "LW", "INSTANCEOF", "TYPEOF", "CAST", "CURRENT_TIMESTAMP", 
		"UNTIL", "AT", "TIMEPERIOD_YEAR", "TIMEPERIOD_YEARS", "TIMEPERIOD_MONTH", 
		"TIMEPERIOD_MONTHS", "TIMEPERIOD_WEEK", "TIMEPERIOD_WEEKS", "TIMEPERIOD_DAY", 
		"TIMEPERIOD_DAYS", "TIMEPERIOD_HOUR", "TIMEPERIOD_HOURS", "TIMEPERIOD_MINUTE", 
		"TIMEPERIOD_MINUTES", "TIMEPERIOD_SEC", "TIMEPERIOD_SECOND", "TIMEPERIOD_SECONDS", 
		"TIMEPERIOD_MILLISEC", "TIMEPERIOD_MILLISECOND", "TIMEPERIOD_MILLISECONDS", 
		"TIMEPERIOD_MICROSEC", "TIMEPERIOD_MICROSECOND", "TIMEPERIOD_MICROSECONDS", 
		"BOOLEAN_TRUE", "BOOLEAN_FALSE", "VALUE_NULL", "WITHIN", "HOUR_SHORT", 
		"MINUTE_SHORT", "SECOND_SHORT", "MILLSECONDS_SHORT", "NEXT", "FOLLOWED_BY", 
		"FOLLOWED_BY_ANY", "NOT_NEXT", "NOT_FOLLOWED_BY", "GOES", "EQUALS", "QUESTION", 
		"LPAREN", "RPAREN", "LBRACK", "RBRACK", "LCURLY", "RCURLY", "COLON", "COMMA", 
		"LNOT", "BNOT", "NOT_EQUAL", "DIV", "PLUS", "MINUS", "STAR", "MOD", "GE", 
		"GT", "LE", "LT", "CONTAINS", "NOT_CONTAINS", "BXOR", "BOR", "LOR", "BAND", 
		"BAND_ASSIGN", "LAND", "SEMI", "DOT", "NUM_LONG", "NUM_DOUBLE", "NUM_FLOAT", 
		"ESCAPECHAR", "ESCAPEBACKTICK", "ATCHAR", "HASHCHAR", "WS", "SL_COMMENT", 
		"ML_COMMENT", "TICKED_STRING_LITERAL", "QUOTED_STRING_LITERAL", "STRING_LITERAL", 
		"INTEGER_LITERAL", "FLOATING_POINT_LITERAL", "IDENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PDL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PDLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PatternSequenceContext extends ParserRuleContext {
		public PatternContext pattern() {
			return getRuleContext(PatternContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PDLParser.EOF, 0); }
		public SkipStrategyContext skipStrategy() {
			return getRuleContext(SkipStrategyContext.class,0);
		}
		public List<PatternCombinationContext> patternCombination() {
			return getRuleContexts(PatternCombinationContext.class);
		}
		public PatternCombinationContext patternCombination(int i) {
			return getRuleContext(PatternCombinationContext.class,i);
		}
		public StopConditionContext stopCondition() {
			return getRuleContext(StopConditionContext.class,0);
		}
		public TimeWindowContext timeWindow() {
			return getRuleContext(TimeWindowContext.class,0);
		}
		public PatternSequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_patternSequence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PDLListener ) ((PDLListener)listener).enterPatternSequence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PDLListener ) ((PDLListener)listener).exitPatternSequence(this);
		}
	}

	public final PatternSequenceContext patternSequence() throws RecognitionException {
		PatternSequenceContext _localctx = new PatternSequenceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_patternSequence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MOD) {
				{
				setState(92);
				skipStrategy();
				}
			}

			setState(95);
			pattern();
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NEXT) | (1L << FOLLOWED_BY) | (1L << FOLLOWED_BY_ANY) | (1L << NOT_NEXT) | (1L << NOT_FOLLOWED_BY))) != 0)) {
				{
				{
				setState(96);
				patternCombination();
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACK) {
				{
				setState(102);
				stopCondition();
				}
			}

			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WITHIN) {
				{
				setState(105);
				timeWindow();
				}
			}

			setState(108);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SkipStrategyContext extends ParserRuleContext {
		public TerminalNode MOD() { return getToken(PDLParser.MOD, 0); }
		public NoSkipContext noSkip() {
			return getRuleContext(NoSkipContext.class,0);
		}
		public SkipToNextContext skipToNext() {
			return getRuleContext(SkipToNextContext.class,0);
		}
		public SkipPastLastContext skipPastLast() {
			return getRuleContext(SkipPastLastContext.class,0);
		}
		public SkipToFirstContext skipToFirst() {
			return getRuleContext(SkipToFirstContext.class,0);
		}
		public SkipToLastContext skipToLast() {
			return getRuleContext(SkipToLastContext.class,0);
		}
		public SkipStrategyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_skipStrategy; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PDLListener ) ((PDLListener)listener).enterSkipStrategy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PDLListener ) ((PDLListener)listener).exitSkipStrategy(this);
		}
	}

	public final SkipStrategyContext skipStrategy() throws RecognitionException {
		SkipStrategyContext _localctx = new SkipStrategyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_skipStrategy);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(MOD);
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SKIP_NO_SKIP:
				{
				setState(111);
				noSkip();
				}
				break;
			case SKIP_TO_NEXT:
				{
				setState(112);
				skipToNext();
				}
				break;
			case SKIP_SKIP_PAST_LAST:
				{
				setState(113);
				skipPastLast();
				}
				break;
			case SKIP_SKIP_TO_FIRST:
				{
				setState(114);
				skipToFirst();
				}
				break;
			case SKIP_SKIP_TO_LAST:
				{
				setState(115);
				skipToLast();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NoSkipContext extends ParserRuleContext {
		public TerminalNode SKIP_NO_SKIP() { return getToken(PDLParser.SKIP_NO_SKIP, 0); }
		public NoSkipContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_noSkip; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PDLListener ) ((PDLListener)listener).enterNoSkip(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PDLListener ) ((PDLListener)listener).exitNoSkip(this);
		}
	}

	public final NoSkipContext noSkip() throws RecognitionException {
		NoSkipContext _localctx = new NoSkipContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_noSkip);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(SKIP_NO_SKIP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SkipToNextContext extends ParserRuleContext {
		public TerminalNode SKIP_TO_NEXT() { return getToken(PDLParser.SKIP_TO_NEXT, 0); }
		public SkipToNextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_skipToNext; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PDLListener ) ((PDLListener)listener).enterSkipToNext(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PDLListener ) ((PDLListener)listener).exitSkipToNext(this);
		}
	}

	public final SkipToNextContext skipToNext() throws RecognitionException {
		SkipToNextContext _localctx = new SkipToNextContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_skipToNext);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(SKIP_TO_NEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SkipPastLastContext extends ParserRuleContext {
		public TerminalNode SKIP_SKIP_PAST_LAST() { return getToken(PDLParser.SKIP_SKIP_PAST_LAST, 0); }
		public SkipPastLastContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_skipPastLast; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PDLListener ) ((PDLListener)listener).enterSkipPastLast(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PDLListener ) ((PDLListener)listener).exitSkipPastLast(this);
		}
	}

	public final SkipPastLastContext skipPastLast() throws RecognitionException {
		SkipPastLastContext _localctx = new SkipPastLastContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_skipPastLast);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(SKIP_SKIP_PAST_LAST);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
